[gd_scene load_steps=8 format=3 uid="uid://cset7k2m5iaxn"]

[ext_resource type="Script" path="res://scripts/ui/settings_screen.gd" id="1_settings"]
[ext_resource type="FontFile" uid="uid://cqtu6tjh1hcr6" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_font_bold"]
[ext_resource type="FontFile" uid="uid://cuuwxnn2nrftr" path="res://assets/fonts/PixelOperator8.ttf" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.16, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.35, 0.6, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slider_bg"]
bg_color = Color(0.2, 0.2, 0.25, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slider_fill"]
bg_color = Color(0.5, 0.45, 0.7, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.25, 0.24, 0.35, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.38, 0.55, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -240.0
offset_right = 280.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_font_bold")
theme_override_font_sizes/font_size = 28
text = "‚öôÔ∏è Ê∏∏ÊàèËÆæÁΩÆ"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
modulate = Color(0.4, 0.35, 0.6, 0.6)
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="DisplaySection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DisplayLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/DisplaySection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)
theme_override_fonts/font = ExtResource("2_font_bold")
theme_override_font_sizes/font_size = 16
text = "üñ•Ô∏è ÁîªÈù¢ËÆæÁΩÆ"

[node name="WindowModeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/DisplaySection"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="WindowModeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/DisplaySection/WindowModeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
text = "Á™óÂè£Ê®°Âºè"

[node name="WindowModeOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/DisplaySection/WindowModeContainer"]
custom_minimum_size = Vector2(200, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
item_count = 3
popup/item_0/text = "Á™óÂè£Âåñ"
popup/item_1/text = "ÂÖ®Â±è"
popup/item_1/id = 1
popup/item_2/text = "Êó†ËæπÊ°ÜÁ™óÂè£"
popup/item_2/id = 2

[node name="ResolutionContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/DisplaySection"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ResolutionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/DisplaySection/ResolutionContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
text = "ÂàÜËæ®Áéá"

[node name="ResolutionOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/DisplaySection/ResolutionContainer"]
custom_minimum_size = Vector2(200, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.95, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
item_count = 5
popup/item_0/text = "1280 x 720"
popup/item_1/text = "1366 x 768"
popup/item_1/id = 1
popup/item_2/text = "1600 x 900"
popup/item_2/id = 2
popup/item_3/text = "1920 x 1080"
popup/item_3/id = 3
popup/item_4/text = "2560 x 1440"
popup/item_4/id = 4

[node name="AudioSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AudioLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)
theme_override_fonts/font = ExtResource("2_font_bold")
theme_override_font_sizes/font_size = 16
text = "üîä Èü≥ÈáèËÆæÁΩÆ"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MasterVolumeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection/MasterVolumeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
text = "‰∏ªÈü≥Èáè"

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection/MasterVolumeContainer"]
custom_minimum_size = Vector2(180, 24)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_slider_bg")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_slider_fill")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_slider_fill")
max_value = 100.0
value = 80.0

[node name="MasterVolumeValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection/MasterVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
text = "80%"
horizontal_alignment = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MusicVolumeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection/MusicVolumeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
text = "Èü≥‰πêÈü≥Èáè"

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection/MusicVolumeContainer"]
custom_minimum_size = Vector2(180, 24)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_slider_bg")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_slider_fill")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_slider_fill")
max_value = 100.0
value = 80.0

[node name="MusicVolumeValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection/MusicVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
text = "80%"
horizontal_alignment = 2

[node name="SFXVolumeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SFXVolumeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection/SFXVolumeContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
text = "Èü≥ÊïàÈü≥Èáè"

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection/SFXVolumeContainer"]
custom_minimum_size = Vector2(180, 24)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxFlat_slider_bg")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_slider_fill")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_slider_fill")
max_value = 100.0
value = 100.0

[node name="SFXVolumeValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainer/AudioSection/SFXVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 14
text = "100%"
horizontal_alignment = 2

[node name="Separator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
modulate = Color(0.4, 0.35, 0.6, 0.4)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 24

[node name="ApplyButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "‚úì Â∫îÁî®"

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "üîô ËøîÂõû"
